# zseeker

./: .gitignore  CMakeLists.txt  CpuPolynomialChecker.cpp  CpuPolynomialChecker.hpp  CpuQuinticFirstChecker.cpp  CpuQuinticFirstWithBreakoutsChecker.cpp  CpuQuinticLastChecker.cpp  Dockerfile  FindConstantsThatMakeZ3.cpp  GpuNoLookupTableChecker.cu  GpuOuterFirstPolynomialChecker.cu  GpuOuterFirstPolynomialChecker.hpp  GpuPolynomialChecker.cu  GpuPolynomialChecker.hpp  GpuQuinticFirstChecker.cu  GpuQuinticFirstCheckerPositiveOnly.cu  GpuQuinticFirstCheckerPositiveOnlyTopFive.cu  GpuQuinticFirstCheckerPositiveOnlyTopFour.cu  GpuQuinticFirstCheckerPositiveOnlyTopSix.cu  GpuQuinticFirstWithBreakoutsChecker.cu  GpuQuinticLastChecker.cu  LICENSE  Makefile  PolynomialCheckerInterface.hpp  PrintPrecisions.cpp  README.md  checkz3constantswithz5usingLUT.cpp  checkz3constantswithz5usingLUTandCPU.cpp  checkz3constantswithz5usingLUTandGPU.cu  cudawrapper.hpp  deviceQuery_results_20230520.txt  gridSizeExperiment.txt  hitRefinement.cpp  hitRefinement.hpp  lookupTable.hpp  lookupTableAccessor.cpp  lookupTableAccessor.hpp  main.cpp  math.hpp  seekInfinitely
schema/: dump_schema.sh  schema.sql  schema_guard_inject.sql
scripts/: check_kernel_errors.sh  check_kernel_leaks.sh  diagnose_kernel.sh  profile_gpu.sh  profile_kernel.sh  profile_kernel_timing.sh
test/: ArithmeticTestSuite.cpp  CpuPolynomialCheckerTestSuite.cpp  GpuOuterFirstPolynomialCheckerTestSuite.cpp  GpuPolynomialCheckerTestSuite.cpp  GpuQuinticFirstWithBreakoutsHarness.cpp  LookupTableTestSuite.cpp  PrecisionTest.cpp  PrecisionTestSuite.cpp  SomeTest.cpp
